# uber

./: docs.md  main.ipynb  map_selection.ipynb  pyproject.toml  resultados.csv
data/: population_parameters_rates_by_district.csv  renda_media_distrito.csv
data/mapas/SAD69-96_SHP_logradouronbl/: SAD69-96_SHP_logradouronbl_line.shx
data/mapas/SIRGAS_SHP_logradouronbl/: SIRGAS_SHP_logradouronbl_line.shx
data/mapas/SaoPaulo_merged/: sao_paulo.shx
docs/: Dicionário-de-Dados-Logradouro.xlsx  docs.md
