[tool.poetry]
name = "uber"
version = "0.1.0"
description = ""
authors = ["Sasa Salmen <sasinhe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
