[tool.poetry]
name = "uber"
version = "0.1.0"
description = ""
authors = ["Sasa Salmen <sasinhe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
networkx = "^3.3"
geopandas = "^1.0.1"
matplotlib = "^3.10.0"
requests = "^2.32.3"
geojson = "^3.2.0"
owslib = "^0.32.0"
geopy = "^2.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
